src/main/java/ntesec/juli/parser/IMCLParser.java
// Generated from E:/MyGit/workspace/model-slicing/src/grammar\IMCL.g4 by ANTLR 4.7
package ntesec.juli.parser;

import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class IMCLParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5,
			T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9, T__9 = 10, T__10 = 11,
			T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16,
			T__16 = 17, T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21,
			T__21 = 22, T__22 = 23, T__23 = 24, T__24 = 25, T__25 = 26,
			T__26 = 27, T__27 = 28, T__28 = 29, ID = 30, VALUE = 31,
			BOOLEAN = 32, STRING = 33, CALC = 34, RELATION = 35, INVOKE = 36,
			WS = 37;
	public static final int RULE_languageIMCL = 0, RULE_codeBody = 1,
			RULE_resourceDefine = 2, RULE_processDefine = 3, RULE_codeBlock = 4,
			RULE_channelDefine = 5, RULE_triggerDefine = 6,
			RULE_whileDefine = 7, RULE_ifDefine = 8, RULE_elsifDefine = 9,
			RULE_elseDefine = 10, RULE_assignDefine = 11,
			RULE_conditionExpr = 12, RULE_varDefine = 13,
			RULE_functionExpr = 14, RULE_varAtom = 15, RULE_valueAtom = 16,
			RULE_channel = 17, RULE_constraintDefine = 18;
	public static final String[] ruleNames = { "languageIMCL", "codeBody",
			"resourceDefine", "processDefine", "codeBlock", "channelDefine",
			"triggerDefine", "whileDefine", "ifDefine", "elsifDefine",
			"elseDefine", "assignDefine", "conditionExpr", "varDefine",
			"functionExpr", "varAtom", "valueAtom", "channel",
			"constraintDefine" };

	private static final String[] _LITERAL_NAMES = { null, "'SENSOR'",
			"'DEVICE'", "':'", "','", "';'", "'program'", "'function'", "'('",
			"')'", "'['", "']'", "'{'", "'}'", "'TRIGGER'", "'WHILE'", "'IF'",
			"'ELSIF'", "'ELSE'", "':='", "'RETURN'", "'STOP'", "'PARAM'",
			"'VAR'", "'CHANNEL.DD.'", "'!'", "'?'", "'CHANNEL.CD.'",
			"'DATA.SYNC.'", "'constraint'" };
	private static final String[] _SYMBOLIC_NAMES = { null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, "ID", "VALUE", "BOOLEAN", "STRING", "CALC",
			"RELATION", "INVOKE", "WS" };
	public static final Vocabulary VOCABULARY = new VocabularyImpl(
			_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "IMCL.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public IMCLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA,
				_sharedContextCache);
	}

	public static class LanguageIMCLContext extends ParserRuleContext {
		public List<CodeBodyContext> codeBody() {
			return getRuleContexts(CodeBodyContext.class);
		}

		public CodeBodyContext codeBody(int i) {
			return getRuleContext(CodeBodyContext.class, i);
		}

		public LanguageIMCLContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_languageIMCL;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).enterLanguageIMCL(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).exitLanguageIMCL(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof IMCLVisitor)
				return ((IMCLVisitor<? extends T>) visitor)
						.visitLanguageIMCL(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final LanguageIMCLContext languageIMCL()
			throws RecognitionException {
		LanguageIMCLContext _localctx = new LanguageIMCLContext(_ctx,
				getState());
		enterRule(_localctx, 0, RULE_languageIMCL);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la)
						& ((1L << T__0) | (1L << T__1) | (1L << T__5)
								| (1L << T__6) | (1L << T__28))) != 0)) {
					{
						{
							setState(38);
							codeBody();
						}
					}
					setState(43);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeBodyContext extends ParserRuleContext {
		public ProcessDefineContext processDefine() {
			return getRuleContext(ProcessDefineContext.class, 0);
		}

		public ResourceDefineContext resourceDefine() {
			return getRuleContext(ResourceDefineContext.class, 0);
		}

		public ConstraintDefineContext constraintDefine() {
			return getRuleContext(ConstraintDefineContext.class, 0);
		}

		public CodeBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_codeBody;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).enterCodeBody(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).exitCodeBody(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof IMCLVisitor)
				return ((IMCLVisitor<? extends T>) visitor).visitCodeBody(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final CodeBodyContext codeBody() throws RecognitionException {
		CodeBodyContext _localctx = new CodeBodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_codeBody);
		try {
			setState(47);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
			case T__6:
				enterOuterAlt(_localctx, 1); {
				setState(44);
				processDefine();
			}
				break;
			case T__0:
			case T__1:
				enterOuterAlt(_localctx, 2); {
				setState(45);
				resourceDefine();
			}
				break;
			case T__28:
				enterOuterAlt(_localctx, 3); {
				setState(46);
				constraintDefine();
			}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResourceDefineContext extends ParserRuleContext {
		public List<VarAtomContext> varAtom() {
			return getRuleContexts(VarAtomContext.class);
		}

		public VarAtomContext varAtom(int i) {
			return getRuleContext(VarAtomContext.class, i);
		}

		public ResourceDefineContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_resourceDefine;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).enterResourceDefine(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).exitResourceDefine(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof IMCLVisitor)
				return ((IMCLVisitor<? extends T>) visitor)
						.visitResourceDefine(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ResourceDefineContext resourceDefine()
			throws RecognitionException {
		ResourceDefineContext _localctx = new ResourceDefineContext(_ctx,
				getState());
		enterRule(_localctx, 4, RULE_resourceDefine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(49);
				_la = _input.LA(1);
				if (!(_la == T__0 || _la == T__1)) {
					_errHandler.recoverInline(this);
				} else {
					if (_input.LA(1) == Token.EOF)
						matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(50);
				match(T__2);
				setState(51);
				varAtom();
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == T__3) {
					{
						{
							setState(52);
							match(T__3);
							setState(53);
							varAtom();
						}
					}
					setState(58);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(59);
				match(T__4);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcessDefineContext extends ParserRuleContext {
		public TerminalNode ID() {
			return getToken(IMCLParser.ID, 0);
		}

		public List<VarDefineContext> varDefine() {
			return getRuleContexts(VarDefineContext.class);
		}

		public VarDefineContext varDefine(int i) {
			return getRuleContext(VarDefineContext.class, i);
		}

		public List<CodeBlockContext> codeBlock() {
			return getRuleContexts(CodeBlockContext.class);
		}

		public CodeBlockContext codeBlock(int i) {
			return getRuleContext(CodeBlockContext.class, i);
		}

		public ProcessDefineContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_processDefine;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).enterProcessDefine(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).exitProcessDefine(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof IMCLVisitor)
				return ((IMCLVisitor<? extends T>) visitor)
						.visitProcessDefine(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ProcessDefineContext processDefine()
			throws RecognitionException {
		ProcessDefineContext _localctx = new ProcessDefineContext(_ctx,
				getState());
		enterRule(_localctx, 6, RULE_processDefine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(61);
				_la = _input.LA(1);
				if (!(_la == T__5 || _la == T__6)) {
					_errHandler.recoverInline(this);
				} else {
					if (_input.LA(1) == Token.EOF)
						matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(62);
				match(T__2);
				setState(63);
				match(ID);
				setState(64);
				match(T__7);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__21 || _la == T__22) {
					{
						setState(65);
						varDefine();
					}
				}

				setState(68);
				match(T__8);
				setState(69);
				match(T__9);
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__21 || _la == T__22) {
					{
						setState(70);
						varDefine();
					}
				}

				setState(73);
				match(T__10);
				setState(74);
				match(T__11);
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13)
						| (1L << T__14) | (1L << T__15) | (1L << T__19)
						| (1L << T__20) | (1L << T__23) | (1L << T__26)
						| (1L << T__27) | (1L << ID) | (1L << VALUE)
						| (1L << BOOLEAN) | (1L << STRING))) != 0)) {
					{
						{
							setState(75);
							codeBlock();
						}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(81);
				match(T__12);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeBlockContext extends ParserRuleContext {
		public AssignDefineContext assignDefine() {
			return getRuleContext(AssignDefineContext.class, 0);
		}

		public IfDefineContext ifDefine() {
			return getRuleContext(IfDefineContext.class, 0);
		}

		public WhileDefineContext whileDefine() {
			return getRuleContext(WhileDefineContext.class, 0);
		}

		public TriggerDefineContext triggerDefine() {
			return getRuleContext(TriggerDefineContext.class, 0);
		}

		public ChannelDefineContext channelDefine() {
			return getRuleContext(ChannelDefineContext.class, 0);
		}

		public CodeBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_codeBlock;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).enterCodeBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).exitCodeBlock(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof IMCLVisitor)
				return ((IMCLVisitor<? extends T>) visitor)
						.visitCodeBlock(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final CodeBlockContext codeBlock() throws RecognitionException {
		CodeBlockContext _localctx = new CodeBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_codeBlock);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__19:
			case T__20:
			case ID:
			case VALUE:
			case BOOLEAN:
			case STRING:
				enterOuterAlt(_localctx, 1); {
				setState(83);
				assignDefine();
			}
				break;
			case T__15:
				enterOuterAlt(_localctx, 2); {
				setState(84);
				ifDefine();
			}
				break;
			case T__14:
				enterOuterAlt(_localctx, 3); {
				setState(85);
				whileDefine();
			}
				break;
			case T__13:
				enterOuterAlt(_localctx, 4); {
				setState(86);
				triggerDefine();
			}
				break;
			case T__23:
			case T__26:
			case T__27:
				enterOuterAlt(_localctx, 5); {
				setState(87);
				channelDefine();
			}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChannelDefineContext extends ParserRuleContext {
		public ChannelContext channel() {
			return getRuleContext(ChannelContext.class, 0);
		}

		public ChannelDefineContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_channelDefine;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).enterChannelDefine(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).exitChannelDefine(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof IMCLVisitor)
				return ((IMCLVisitor<? extends T>) visitor)
						.visitChannelDefine(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ChannelDefineContext channelDefine()
			throws RecognitionException {
		ChannelDefineContext _localctx = new ChannelDefineContext(_ctx,
				getState());
		enterRule(_localctx, 10, RULE_channelDefine);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(90);
				channel();
				setState(91);
				match(T__4);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TriggerDefineContext extends ParserRuleContext {
		public ConditionExprContext conditionExpr() {
			return getRuleContext(ConditionExprContext.class, 0);
		}

		public List<CodeBlockContext> codeBlock() {
			return getRuleContexts(CodeBlockContext.class);
		}

		public CodeBlockContext codeBlock(int i) {
			return getRuleContext(CodeBlockContext.class, i);
		}

		public TriggerDefineContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_triggerDefine;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).enterTriggerDefine(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).exitTriggerDefine(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof IMCLVisitor)
				return ((IMCLVisitor<? extends T>) visitor)
						.visitTriggerDefine(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final TriggerDefineContext triggerDefine()
			throws RecognitionException {
		TriggerDefineContext _localctx = new TriggerDefineContext(_ctx,
				getState());
		enterRule(_localctx, 12, RULE_triggerDefine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(93);
				match(T__13);
				setState(94);
				match(T__7);
				setState(95);
				conditionExpr();
				setState(96);
				match(T__8);
				setState(97);
				match(T__11);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(98);
							codeBlock();
						}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13)
						| (1L << T__14) | (1L << T__15) | (1L << T__19)
						| (1L << T__20) | (1L << T__23) | (1L << T__26)
						| (1L << T__27) | (1L << ID) | (1L << VALUE)
						| (1L << BOOLEAN) | (1L << STRING))) != 0));
				setState(103);
				match(T__12);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileDefineContext extends ParserRuleContext {
		public ConditionExprContext conditionExpr() {
			return getRuleContext(ConditionExprContext.class, 0);
		}

		public List<CodeBlockContext> codeBlock() {
			return getRuleContexts(CodeBlockContext.class);
		}

		public CodeBlockContext codeBlock(int i) {
			return getRuleContext(CodeBlockContext.class, i);
		}

		public WhileDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_whileDefine;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).enterWhileDefine(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).exitWhileDefine(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof IMCLVisitor)
				return ((IMCLVisitor<? extends T>) visitor)
						.visitWhileDefine(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final WhileDefineContext whileDefine() throws RecognitionException {
		WhileDefineContext _localctx = new WhileDefineContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_whileDefine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(105);
				match(T__14);
				setState(106);
				match(T__7);
				setState(107);
				conditionExpr();
				setState(108);
				match(T__8);
				setState(109);
				match(T__11);
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(110);
							codeBlock();
						}
					}
					setState(113);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13)
						| (1L << T__14) | (1L << T__15) | (1L << T__19)
						| (1L << T__20) | (1L << T__23) | (1L << T__26)
						| (1L << T__27) | (1L << ID) | (1L << VALUE)
						| (1L << BOOLEAN) | (1L << STRING))) != 0));
				setState(115);
				match(T__12);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfDefineContext extends ParserRuleContext {
		public ConditionExprContext conditionExpr() {
			return getRuleContext(ConditionExprContext.class, 0);
		}

		public List<CodeBlockContext> codeBlock() {
			return getRuleContexts(CodeBlockContext.class);
		}

		public CodeBlockContext codeBlock(int i) {
			return getRuleContext(CodeBlockContext.class, i);
		}

		public List<ElsifDefineContext> elsifDefine() {
			return getRuleContexts(ElsifDefineContext.class);
		}

		public ElsifDefineContext elsifDefine(int i) {
			return getRuleContext(ElsifDefineContext.class, i);
		}

		public List<ElseDefineContext> elseDefine() {
			return getRuleContexts(ElseDefineContext.class);
		}

		public ElseDefineContext elseDefine(int i) {
			return getRuleContext(ElseDefineContext.class, i);
		}

		public IfDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_ifDefine;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).enterIfDefine(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).exitIfDefine(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof IMCLVisitor)
				return ((IMCLVisitor<? extends T>) visitor).visitIfDefine(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final IfDefineContext ifDefine() throws RecognitionException {
		IfDefineContext _localctx = new IfDefineContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifDefine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(117);
				match(T__15);
				setState(118);
				match(T__7);
				setState(119);
				conditionExpr();
				setState(120);
				match(T__8);
				setState(121);
				match(T__11);
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13)
						| (1L << T__14) | (1L << T__15) | (1L << T__19)
						| (1L << T__20) | (1L << T__23) | (1L << T__26)
						| (1L << T__27) | (1L << ID) | (1L << VALUE)
						| (1L << BOOLEAN) | (1L << STRING))) != 0)) {
					{
						{
							setState(122);
							codeBlock();
						}
					}
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(128);
				match(T__12);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == T__16) {
					{
						{
							setState(129);
							elsifDefine();
						}
					}
					setState(134);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == T__17) {
					{
						{
							setState(135);
							elseDefine();
						}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElsifDefineContext extends ParserRuleContext {
		public ConditionExprContext conditionExpr() {
			return getRuleContext(ConditionExprContext.class, 0);
		}

		public List<CodeBlockContext> codeBlock() {
			return getRuleContexts(CodeBlockContext.class);
		}

		public CodeBlockContext codeBlock(int i) {
			return getRuleContext(CodeBlockContext.class, i);
		}

		public ElsifDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_elsifDefine;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).enterElsifDefine(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).exitElsifDefine(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof IMCLVisitor)
				return ((IMCLVisitor<? extends T>) visitor)
						.visitElsifDefine(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ElsifDefineContext elsifDefine() throws RecognitionException {
		ElsifDefineContext _localctx = new ElsifDefineContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_elsifDefine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(141);
				match(T__16);
				setState(142);
				match(T__7);
				setState(143);
				conditionExpr();
				setState(144);
				match(T__8);
				setState(145);
				match(T__11);
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13)
						| (1L << T__14) | (1L << T__15) | (1L << T__19)
						| (1L << T__20) | (1L << T__23) | (1L << T__26)
						| (1L << T__27) | (1L << ID) | (1L << VALUE)
						| (1L << BOOLEAN) | (1L << STRING))) != 0)) {
					{
						{
							setState(146);
							codeBlock();
						}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(152);
				match(T__12);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseDefineContext extends ParserRuleContext {
		public List<CodeBlockContext> codeBlock() {
			return getRuleContexts(CodeBlockContext.class);
		}

		public CodeBlockContext codeBlock(int i) {
			return getRuleContext(CodeBlockContext.class, i);
		}

		public ElseDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_elseDefine;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).enterElseDefine(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof IMCLListener)
				((IMCLListener) listener).exitElseDefine(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof IMCLVisitor)
				return ((IMCLVisitor<? extends T>) visitor)
						.visitElseDefine(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ElseDefineContext elseDefine() throws RecognitionException {
		ElseDefineContext _localctx = new ElseDefineContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_elseDefine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(154);
				match(T__17);
				setState(155);
				match(T__11);
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
